# visual_acuity

./: CMakeLists.txt  FE-B01.protocol  optag.json  pelliS.protocol  pelliS_05162023.protocol  scotoma_tumbE.protocol  sk_tumbE_08182022  tumb_e_A144_12142022.protocol  tumb_e_Z055.protocol  tumb_e_Z091.protocol  tumb_e_Z110.protocol  tumb_e_Z126.protocol  tumb_e_Z151.protocol  tumb_e_Z171.protocol  tumb_e_sk.protocol
assets/: 3_mirror.tga  3_mirror_white.tga  5_20x100-2_white.tga  6_20x100-2_white.tga  6_mirror.tga  9_mirror.tga  EBarsE.tga  EmptyBox3.tga  MiniScotomas_Blur1026_5arcmin.tga
include/: Pest.h  visual_acuity.hpp  visual_acuity_configuration.hpp
output/assets/: 3_20x100-2.tga  5_20x100-2.tga  5_mirror.tga  5_mirror_white.tga  6_mirror_white.tga  9_20x100-2_white.tga  9_mirror_white.tga
src/: Pest.cpp  visual_acuity.cpp
